# vibe-experiment

./: .env.template  .gitignore  README.md  TODO.md  main.py  product_requirements_document.md  pyproject.toml
.roo/: mcp.json
src/: db.py  download.py  fix_ingest.py  graphiti_manager.py  pipeline.py  transcriber.py
