[project]
name = "graph-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphiti-core[google-genai]>=0.10.5",
    "pydantic[email,timezone]>=2.11.3",
    "yt-dlp>=2025.3.31",
    "python-dotenv>=0.21.0",
    "deepgram-sdk==3.*",
    "mutagen>=1.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]

[tool.uv.pip]
# Set generate-hashes for uv
generate-hashes = true
[tool.mypy]
plugins = ['pydantic.mypy']
